[gd_scene load_steps=9 format=3 uid="uid://c72pm4v2xpu34"]

[ext_resource type="Script" path="res://script/chapter_1/day1/chapter_1_day_1_direction.gd" id="1_514cf"]
[ext_resource type="Texture2D" uid="uid://d3quiwjptjyvi" path="res://art/bg/direccion/direccion.png" id="2_egcwb"]
[ext_resource type="Texture2D" uid="uid://1kscxdf3xwij" path="res://art/bg/direccion/office2.png" id="3_t3668"]
[ext_resource type="PackedScene" uid="uid://bpcs5g3fijv0l" path="res://scenes/player.tscn" id="3_vaskc"]
[ext_resource type="Texture2D" uid="uid://cee36wigadxou" path="res://art/bg/direccion/directora1.png" id="4_1pcjc"]
[ext_resource type="FontFile" uid="uid://btpd2d0e87gb1" path="res://art/fonts/m6x11.ttf" id="6_4dh5t"]
[ext_resource type="PackedScene" uid="uid://dpl6yr04nxcg8" path="res://scenes/HUD/hud.tscn" id="7_pjy30"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfi1h"]
size = Vector2(26, 130)

[node name="chapter_1_day_1_direction" type="Node2D"]
script = ExtResource("1_514cf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -520.0
offset_top = -344.0
offset_right = 792.0
offset_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="direction" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(222, 91)
scale = Vector2(0.884615, 1)
texture = ExtResource("2_egcwb")

[node name="bg" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(240, 64)
texture = ExtResource("3_t3668")

[node name="directora" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(240, 64)
texture = ExtResource("4_1pcjc")

[node name="player" parent="." instance=ExtResource("3_vaskc")]
position = Vector2(131, 127)

[node name="salida_Door" type="Area2D" parent="."]
position = Vector2(99, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="salida_Door"]
position = Vector2(-2, 56)
shape = SubResource("RectangleShape2D_dfi1h")

[node name="Btn_salir" type="Button" parent="salida_Door"]
visible = false
offset_left = -12.0
offset_top = -3.0
offset_right = 31.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("6_4dh5t")
theme_override_font_sizes/font_size = 10
text = "Salir"

[node name="HUD" parent="." instance=ExtResource("7_pjy30")]

[connection signal="body_entered" from="salida_Door" to="." method="_on_salida_door_body_entered"]
[connection signal="body_exited" from="salida_Door" to="." method="_on_salida_door_body_exited"]
[connection signal="pressed" from="salida_Door/Btn_salir" to="." method="_on_btn_salir_pressed"]
